@@ -40,6 +40,22 @@ name|BytesRef
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|automaton
+operator|.
+name|CompiledAutomaton
+import|;
+end_import
+
 begin_comment
 comment|/**  * A per-document byte[] with presorted values.  This is fundamentally an  * iterator over the int ord values per document, with random access APIs  * to resolve an int ord to BytesRef.  *<p>  * Per-Document values in a SortedDocValues are deduplicated, dereferenced,  * and sorted into a dictionary of unique values. A pointer to the  * dictionary value (ordinal) can be retrieved for each document. Ordinals  * are dense and in increasing sorted order.  */
 end_comment
@@ -261,6 +277,82 @@ argument_list|(
 name|this
 argument_list|)
 return|;
+block|}
+comment|/**    * Returns a {@link TermsEnum} over the values, filtered by a {@link CompiledAutomaton}    * The enum supports {@link TermsEnum#ord()}.    */
+DECL|method|intersect
+specifier|public
+name|TermsEnum
+name|intersect
+parameter_list|(
+name|CompiledAutomaton
+name|automaton
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|TermsEnum
+name|in
+init|=
+name|termsEnum
+argument_list|()
+decl_stmt|;
+switch|switch
+condition|(
+name|automaton
+operator|.
+name|type
+condition|)
+block|{
+case|case
+name|NONE
+case|:
+return|return
+name|TermsEnum
+operator|.
+name|EMPTY
+return|;
+case|case
+name|ALL
+case|:
+return|return
+name|in
+return|;
+case|case
+name|SINGLE
+case|:
+return|return
+operator|new
+name|SingleTermsEnum
+argument_list|(
+name|in
+argument_list|,
+name|automaton
+operator|.
+name|term
+argument_list|)
+return|;
+case|case
+name|NORMAL
+case|:
+return|return
+operator|new
+name|AutomatonTermsEnum
+argument_list|(
+name|in
+argument_list|,
+name|automaton
+argument_list|)
+return|;
+default|default:
+comment|// unreachable
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+literal|"unhandled case"
+argument_list|)
+throw|;
+block|}
 block|}
 block|}
 end_class
