@@ -653,6 +653,38 @@ import|;
 end_import
 
 begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|automaton
+operator|.
+name|CompiledAutomaton
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|automaton
+operator|.
+name|RegExp
+import|;
+end_import
+
+begin_import
 import|import static
 name|org
 operator|.
@@ -7709,6 +7741,133 @@ argument_list|,
 name|termsEnum
 operator|.
 name|ord
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// NORMAL automaton
+name|termsEnum
+operator|=
+name|dv
+operator|.
+name|intersect
+argument_list|(
+operator|new
+name|CompiledAutomaton
+argument_list|(
+operator|new
+name|RegExp
+argument_list|(
+literal|".*l.*"
+argument_list|)
+operator|.
+name|toAutomaton
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"hello"
+argument_list|,
+name|termsEnum
+operator|.
+name|next
+argument_list|()
+operator|.
+name|utf8ToString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|termsEnum
+operator|.
+name|ord
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"world"
+argument_list|,
+name|termsEnum
+operator|.
+name|next
+argument_list|()
+operator|.
+name|utf8ToString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|termsEnum
+operator|.
+name|ord
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|termsEnum
+operator|.
+name|next
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// SINGLE automaton
+name|termsEnum
+operator|=
+name|dv
+operator|.
+name|intersect
+argument_list|(
+operator|new
+name|CompiledAutomaton
+argument_list|(
+operator|new
+name|RegExp
+argument_list|(
+literal|"hello"
+argument_list|)
+operator|.
+name|toAutomaton
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"hello"
+argument_list|,
+name|termsEnum
+operator|.
+name|next
+argument_list|()
+operator|.
+name|utf8ToString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|termsEnum
+operator|.
+name|ord
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|termsEnum
+operator|.
+name|next
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -16165,6 +16324,133 @@ argument_list|,
 name|termsEnum
 operator|.
 name|ord
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// NORMAL automaton
+name|termsEnum
+operator|=
+name|dv
+operator|.
+name|intersect
+argument_list|(
+operator|new
+name|CompiledAutomaton
+argument_list|(
+operator|new
+name|RegExp
+argument_list|(
+literal|".*l.*"
+argument_list|)
+operator|.
+name|toAutomaton
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"hello"
+argument_list|,
+name|termsEnum
+operator|.
+name|next
+argument_list|()
+operator|.
+name|utf8ToString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|termsEnum
+operator|.
+name|ord
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"world"
+argument_list|,
+name|termsEnum
+operator|.
+name|next
+argument_list|()
+operator|.
+name|utf8ToString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|termsEnum
+operator|.
+name|ord
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|termsEnum
+operator|.
+name|next
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// SINGLE automaton
+name|termsEnum
+operator|=
+name|dv
+operator|.
+name|intersect
+argument_list|(
+operator|new
+name|CompiledAutomaton
+argument_list|(
+operator|new
+name|RegExp
+argument_list|(
+literal|"hello"
+argument_list|)
+operator|.
+name|toAutomaton
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"hello"
+argument_list|,
+name|termsEnum
+operator|.
+name|next
+argument_list|()
+operator|.
+name|utf8ToString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|termsEnum
+operator|.
+name|ord
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|termsEnum
+operator|.
+name|next
 argument_list|()
 argument_list|)
 expr_stmt|;
